add/update chikurin api updated
