# utils/src/shared/entities/chikurin.ts
@@ -2,7 +2,14 @@ import { ObjectId } from 'mongodb';
 
 export interface chikurin {
     _id: ObjectId,
-    name: string,
-    owner: ObjectId
+    owner: ObjectId,
+    ownerName: string,
+    postCode: string,
+    address: string,
+    area: number,
+    bambooCount: number,
+    category: string,
+    else: string,
+    imgs: string[]
 }
 
